# pydyf

./: .gitignore  README.rst  __init__.py  pyproject.toml
.github/workflows/: tests.yml
docs/: api_reference.rst  changelog.rst  common_use_cases.rst  conf.py  contribute.rst  example_accented_characters.py  first_steps.rst  going_further.rst  index.rst  support.rst
pydyf/: __init__.py
tests/: LICENSE  __init__.py  test_pydyf.py  test_stream.py
