[build-system]
requires = ['flit_core >=2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'pydyf'
author = 'CourtBouillon'
author-email = 'contact@courtbouillon.org'
maintainer = 'CourtBouillon'
maintainer-email = 'contact@courtbouillon.org'
home-page = 'https://www.courtbouillon.org/pydyf'
requires-python = '>=3.6'
keywords = 'pdf generator'
description-file = 'README.rst'
classifiers = [
  'Development Status :: 1 - Planning',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]

[tool.flit.metadata.requires-extra]
doc = ['sphinx', 'sphinx_rtd_theme']
test = ['pytest', 'pytest-cov', 'pytest-flake8', 'pytest-isort', 'coverage[toml]', 'pillow']

[tool.flit.metadata.urls]
Documentation = 'https://doc.courtbouillon.org/pydyf/'
Code = 'https://github.com/CourtBouillon/pydyf'
Issues = 'https://github.com/CourtBouillon/pydyf/issues'
Donation = 'https://opencollective.com/courtbouillon'

[tool.flit.sdist]
exclude = ['.*']

[tool.pytest.ini_options]
addopts = '--isort --flake8 --cov'

[tool.coverage.run]
branch = true
include = ['tests/*', 'pydyf/*']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'def __repr__', 'raise NotImplementedError']
omit = ['.*']

[tool.isort]
default_section = 'FIRSTPARTY'
multi_line_output = 4
